--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>p5.js Archive</title>
+  <title>p5.js 스케치 아카이브</title>
 </head>
 <body>
   <h1>p5.js 스케치 아카이브</h1>
-  <h2>디지털아트 프로그래밍 수업에서 작성한 p5.js 스케치를 아카이빙한 사이트입니다.</h2>
+  <h2>
+    2022-2학기 디지털아트 프로그래밍 수업을 들으며 작성했던<br>
+    p5.js 스케치를 아카이빙한 사이트입니다.
+  </h2>
   <p>
     <h3>스케치 목록</h3>
     <p>
