--- a/sketches/10print_02.html
+++ b/sketches/10print_02.html
@@ -11,7 +11,7 @@
     <main>
     </main>
     <script src="10print_02.js"></script>
-    <p><strong>참고 설명:</strong> 화면을 클릭하면 도형 구성이 재설정됩니다.</p>
+    <p><strong>참고 설명:</strong> 마우스를 움직이면 도형이 변화하고, 화면을 클릭하면 도형 구성이 재설정됩니다.</p>
     <a href="../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
