Add style.css file

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>p5.js 스케치 아카이브</title>
 </head>
+
+<link rel="stylesheet" href="style.css">
+
 <body>
   <h1>p5.js 스케치 아카이브</h1>
   <h2>
-    2022-2학기 디지털아트 프로그래밍 수업을 들으며 작성했던<br>
-    p5.js 스케치를 아카이빙한 사이트입니다.
+    2022-2학기 디지털아트 프로그래밍 수업을 들으며 작성했던 p5.js 스케치를 아카이빙한 사이트입니다.
   </h2>
   <p>
-    <h3>스케치 목록</h3>
+    
+    <h3><img src="img/p5js.png"> 스케치 목록</h3>
     <p>
       <strong>10 print 기본 예제 변형</strong><br>
       10 print 기본 예제를 변형한 스케치입니다.<br>
@@ -44,6 +47,7 @@
       별똥별이 무작위로 생성되는 스케치입니다.<br>
       <a href="sketches/shooting_star.html">별똥별 스케치</a>
     </p>
+    
   </p>
 </body>
 </html>
