--- a/sketches/10print_02.html
+++ b/sketches/10print_02.html
@@ -5,6 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <title>10 print 예제 변형 2</title>
   </head>
   
   <link rel="stylesheet" href="../style.css">
