Add sketches and edited descriptions

--- a/sketches/lifespan.html
+++ b/sketches/lifespan.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>10 print 예제 변형 1</title>
+    <title>바운스볼 살리기</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
@@ -13,8 +13,8 @@
   <body>
     <main>
     </main>
-    <script src="10print_01.js"></script>
-    <p><strong>참고 설명:</strong> 화면을 클릭하면 하트 위치가 재설정됩니다.</p>
+    <script src="lifespan.js"></script>
+    <p><strong>참고 설명:</strong> 공이 화면에 부딪힐 때마다 수명이 하나씩 줄고, 화면을 클릭하면 공의 수명이 늘어납니다.</p>
     <a href="../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
