--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
     </p>
 
     <p>
-      <strong>바운스볼 살리기</strong><br>
-      공과 캔버스, 마우스 간의 인터랙션을 구현한 스케치입니다.<br>
-      <a href="sketches/lifespan.html">바운스볼 스케치</a><br>
-    </p>
-
-    <p>
       <strong>넷플릭스</strong><br>
       넷플릭스 인트로를 구현한 스케치입니다.<br>
       <a href="sketches/netflix.html">넷플릭스 스케치</a><br>
@@ -55,11 +49,23 @@
     </p>
 
     <p>
+      <strong>바운스볼 살리기</strong><br>
+      공과 캔버스, 마우스 간의 인터랙션을 구현한 스케치입니다.<br>
+      <a href="sketches/lifespan.html">바운스볼 스케치</a><br>
+    </p>
+
+    <p>
       <strong>바람 일으키기</strong><br>
       공이 마우스로 만든 바람을 따라 움직이는 스케치입니다.<br>
       <a href="sketches/wind.html">바람 스케치</a>
     </p>
     
+    <p>
+      <strong>공튀기기</strong><br>
+      수 많은 공들과 마우스와의 인터랙션을 구현한 스케치입니다.<br>
+      <a href="sketches/purple_mover.html">공튀기기 스케치</a>
+    </p>
+
   </p>
 </body>
 </html>
