Edit desciption form

--- a/sketches/10print_01.html
+++ b/sketches/10print_01.html
@@ -14,7 +14,8 @@
     <main>
     </main>
     <script src="10print_01.js"></script>
-    <p><strong>참고 설명:</strong> 화면을 클릭하면 하트 위치가 재설정됩니다.</p>
+    <p><strong>참고 설명:</strong><br>
+      화면을 클릭하면 하트 위치가 재설정됩니다.</p>
     <a href="../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
