--- a/sketches/colorful_circles.html
+++ b/sketches/colorful_circles.html
@@ -14,7 +14,8 @@
     <main>
     </main>
     <script src="colorful_circles.js"></script>
-    <p><strong>참고 설명:</strong> 마우스를 움직이면 원이 움직입니다.</p>
+    <p><strong>참고 설명:</strong><br>
+      마우스를 움직이면 원이 움직입니다.</p>
     <a href="../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
