--- a/sketches/lifespan.html
+++ b/sketches/lifespan.html
@@ -14,7 +14,9 @@
     <main>
     </main>
     <script src="lifespan.js"></script>
-    <p><strong>참고 설명:</strong> 공이 화면에 부딪힐 때마다 수명이 하나씩 줄고, 화면을 클릭하면 공의 수명이 늘어납니다.</p>
+    <p><strong>참고 설명:</strong><br>
+      공이 화면에 부딪힐 때마다 수명이 하나씩 줄어듭니다.<br>
+      화면을 클릭하면 공의 수명이 늘어납니다.</p>
     <a href="../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
