Edit file path / Divide some JavaScript files

--- a/index.html
+++ b/index.html
@@ -20,50 +20,50 @@
     <p>
       <strong>10 print 예제 변형</strong><br>
       10 print 기본 예제를 변형한 스케치입니다.<br>
-      <a href="sketches/10print_01.html">1번 스케치</a><br>
-      <a href="sketches/10print_02.html">2번 스케치</a>
+      <a href="sketches/10print/10print_01.html">1번 스케치</a><br>
+      <a href="sketches/10print/10print_02.html">2번 스케치</a>
     </p>
     
     <p>
       <strong>10 print 예제 활용</strong><br>
       10 print 예제에서 나아가 마우스와의 인터랙션을 구현한 스케치입니다.<br>
-      <a href="sketches/colorful_circles.html">흔들리는 원 스케치</a><br>
+      <a href="sketches/colorful_circles/colorful_circles.html">흔들리는 원 스케치</a><br>
     </p>
 
     <p>
       <strong>동공 지진</strong><br>
       마우스와 스케치와의 인터랙션을 구현한 스케치입니다.<br>
-      <a href="sketches/eyequake.html">동공 지진 스케치</a><br>
+      <a href="sketches/eyequake/eyequake.html">동공 지진 스케치</a><br>
     </p>
 
     <p>
       <strong>넷플릭스</strong><br>
       넷플릭스 인트로를 구현한 스케치입니다.<br>
-      <a href="sketches/netflix.html">넷플릭스 스케치</a><br>
+      <a href="sketches/netflix/netflix.html">넷플릭스 스케치</a><br>
     </p>
 
     <p>
       <strong>별똥별</strong><br>
       별똥별이 무작위로 생성되는 스케치입니다.<br>
-      <a href="sketches/shooting_star.html">별똥별 스케치</a>
+      <a href="sketches/shooting_star/shooting_star.html">별똥별 스케치</a>
     </p>
 
     <p>
       <strong>바운스볼 살리기</strong><br>
       공과 캔버스, 마우스 간의 인터랙션을 구현한 스케치입니다.<br>
-      <a href="sketches/lifespan.html">바운스볼 스케치</a><br>
+      <a href="sketches/lifespan/lifespan.html">바운스볼 스케치</a><br>
     </p>
 
     <p>
       <strong>바람 일으키기</strong><br>
       공이 마우스로 만든 바람을 따라 움직이는 스케치입니다.<br>
-      <a href="sketches/wind.html">바람 스케치</a>
+      <a href="sketches/wind/wind.html">바람 스케치</a>
     </p>
     
     <p>
       <strong>공튀기기</strong><br>
       수 많은 공들과 마우스와의 인터랙션을 구현한 스케치입니다.<br>
-      <a href="sketches/purple_mover.html">공튀기기 스케치</a>
+      <a href="sketches/purple_mover/purple_mover.html">공튀기기 스케치</a>
     </p>
 
   </p>
