--- a/sketches/10print/10print_02.html
+++ b/sketches/10print/10print_02.html
@@ -5,17 +5,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>별똥별</title>
+    <title>10 print 예제 변형 2</title>
   </head>
-
+  
   <link rel="stylesheet" href="../style.css">
 
   <body>
     <main>
     </main>
-    <script src="shooting_star.js"></script>
+    <script src="10print_02.js"></script>
     <p><strong>참고 설명:</strong><br>
+      마우스를 움직이면 도형이 변화합니다.<br>
       화면을 클릭하면 도형 구성이 재설정됩니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
