--- a/sketches/eyequake/eyequake.html
+++ b/sketches/eyequake/eyequake.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>바운스볼 살리기</title>
+    <title>동공 지진</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
@@ -13,10 +13,9 @@
   <body>
     <main>
     </main>
-    <script src="lifespan.js"></script>
+    <script src="eyequake.js"></script>
     <p><strong>참고 설명:</strong><br>
-      공이 화면에 부딪힐 때마다 수명이 하나씩 줄어듭니다.<br>
-      화면을 클릭하면 공의 수명이 늘어납니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+      마우스를 움직이면 눈이 움직입니다.</p>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
