--- a/sketches/netflix/netflix.html
+++ b/sketches/netflix/netflix.html
@@ -5,17 +5,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>10 print 예제 활용</title>
+    <title>넷플릭스</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
-  
+
   <body>
     <main>
     </main>
-    <script src="colorful_circles.js"></script>
+    <script src="netflix.js"></script>
     <p><strong>참고 설명:</strong><br>
-      마우스를 움직이면 원이 움직입니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+      화면을 클릭하면 도형 구성이 재설정됩니다.</p>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
