--- a/sketches/wind/wind.html
+++ b/sketches/wind/wind.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>10 print 예제 변형 1</title>
+    <title>바람 일으키기</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
@@ -13,9 +13,10 @@
   <body>
     <main>
     </main>
-    <script src="10print_01.js"></script>
+    <script src="wind.js"></script>
+    <script src="Particle.js"></script>
     <p><strong>참고 설명:</strong><br>
-      화면을 클릭하면 하트 위치가 재설정됩니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+      마우스를 움직이면 바람의 방향이 변합니다.</p>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
