--- a/sketches/colorful_circles/colorful_circles.html
+++ b/sketches/colorful_circles/colorful_circles.html
@@ -5,18 +5,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>별똥별</title>
+    <title>10 print 예제 활용</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
-
+  
   <body>
     <main>
     </main>
-    <script src="purple_mover.js"></script>
-    <p><strong>참고 설명:</strong> 마우스를 클릭하면 공이 마우스를 따라갑니다.<br>
-      아무 키나 누르면 공이 멈춥니다.<br>
-      공이 벽에 닿으면 튕깁니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+    <script src="colorful_circles.js"></script>
+    <p><strong>참고 설명:</strong><br>
+      마우스를 움직이면 원이 움직입니다.</p>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
