--- a/sketches/lifespan/lifespan.html
+++ b/sketches/lifespan/lifespan.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>바람 일으키기</title>
+    <title>바운스볼 살리기</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
@@ -13,9 +13,11 @@
   <body>
     <main>
     </main>
-    <script src="wind.js"></script>
+    <script src="lifespan.js"></script>
+    <script src="Walker.js"></script>
     <p><strong>참고 설명:</strong><br>
-      마우스를 움직이면 바람의 방향이 변합니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+      공이 화면에 부딪힐 때마다 수명이 하나씩 줄어듭니다.<br>
+      화면을 클릭하면 공의 수명이 늘어납니다.</p>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
