--- a/sketches/shooting_star/shooting_star.html
+++ b/sketches/shooting_star/shooting_star.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>넷플릭스</title>
+    <title>별똥별</title>
   </head>
 
   <link rel="stylesheet" href="../style.css">
@@ -13,9 +13,9 @@
   <body>
     <main>
     </main>
-    <script src="netflix.js"></script>
+    <script src="shooting_star.js"></script>
     <p><strong>참고 설명:</strong><br>
       화면을 클릭하면 도형 구성이 재설정됩니다.</p>
-    <a href="../index.html">홈 화면으로 돌아가기</a>
+    <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
