Fix css applications

--- a/sketches/10print/10print_02.html
+++ b/sketches/10print/10print_02.html
@@ -8,7 +8,7 @@
     <title>10 print 예제 변형 2</title>
   </head>
   
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
