--- a/sketches/lifespan/lifespan.html
+++ b/sketches/lifespan/lifespan.html
@@ -8,7 +8,7 @@
     <title>바운스볼 살리기</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
