--- a/sketches/netflix/netflix.html
+++ b/sketches/netflix/netflix.html
@@ -8,7 +8,7 @@
     <title>넷플릭스</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
