--- a/sketches/wind/wind.html
+++ b/sketches/wind/wind.html
@@ -8,7 +8,7 @@
     <title>바람 일으키기</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
