--- a/sketches/10print/10print_01.html
+++ b/sketches/10print/10print_01.html
@@ -8,7 +8,7 @@
     <title>10 print 예제 변형 1</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
