--- a/sketches/colorful_circles/colorful_circles.html
+++ b/sketches/colorful_circles/colorful_circles.html
@@ -8,7 +8,7 @@
     <title>10 print 예제 활용</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
   
   <body>
     <main>
