--- a/sketches/eyequake/eyequake.html
+++ b/sketches/eyequake/eyequake.html
@@ -8,7 +8,7 @@
     <title>동공 지진</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
