--- a/sketches/purple_mover/purple_mover.html
+++ b/sketches/purple_mover/purple_mover.html
@@ -8,7 +8,7 @@
     <title>별똥별</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
