--- a/sketches/shooting_star/shooting_star.html
+++ b/sketches/shooting_star/shooting_star.html
@@ -8,7 +8,7 @@
     <title>별똥별</title>
   </head>
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 
   <body>
     <main>
