--- a/sketches/purple_mover/purple_mover.html
+++ b/sketches/purple_mover/purple_mover.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <title>별똥별</title>
+    <title>공튀기기</title>
   </head>
 
   <link rel="stylesheet" href="../../style.css">
@@ -15,9 +15,9 @@
     </main>
     <script src="purple_mover.js"></script>
     <script src="Mover.js"></script>
-    <p><strong>참고 설명:</strong> 마우스를 클릭하면 공이 마우스를 따라갑니다.<br>
-      아무 키나 누르면 공이 멈춥니다.<br>
-      공이 벽에 닿으면 튕깁니다.</p>
+    <p><strong>참고 설명:</strong> 마우스를 클릭하면 도형이 마우스를 따라갑니다.<br>
+      아무 키나 누르면 도형이 멈춥니다.<br>
+      도형이 벽에 닿으면 튕깁니다.</p>
     <a href="../../index.html">홈 화면으로 돌아가기</a>
   </body>
 </html>
