--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
       <a href="sketches/purple_mover/purple_mover.html">공튀기기 스케치</a>
     </p>
 
+    <p>
+      <strong>서울예대 뿌리기</strong><br>
+      마우스 클릭을 통해 서울예대 로고를 뿌려보는 스케치입니다.<br>
+      <a href="sketches/sia_particle/sia_particle.html">서울예대 뿌리기 스케치</a>
+    </p>
   </p>
 </body>
 </html>
